--- a/material_sphinx_theme/material_sphinx_theme/static/stylesheets/application.css
+++ b/material_sphinx_theme/material_sphinx_theme/static/stylesheets/application.css
@@ -1537,130 +1537,130 @@ html .md-typeset .admonition>:last-child,html .md-typeset details>:last-child{
     color:#9e9e9e;
     content:""
 }
-.codehilite .o,.codehilite .ow,.md-typeset .highlight .o,.md-typeset .highlight .ow{
+.codehilite .o,.codehilite .ow,.highlight .o,.highlight .ow{
     color:inherit
 }
-.codehilite .ge,.md-typeset .highlight .ge{
+.codehilite .ge,.highlight .ge{
     color:#000
 }
-.codehilite .gr,.md-typeset .highlight .gr{
+.codehilite .gr,.highlight .gr{
     color:#a00
 }
-.codehilite .gh,.md-typeset .highlight .gh{
+.codehilite .gh,.highlight .gh{
     color:#999
 }
-.codehilite .go,.md-typeset .highlight .go{
+.codehilite .go,.highlight .go{
     color:#888
 }
-.codehilite .gp,.md-typeset .highlight .gp{
+.codehilite .gp,.highlight .gp{
     color:#555
 }
-.codehilite .gs,.md-typeset .highlight .gs{
+.codehilite .gs,.highlight .gs{
     color:inherit
 }
-.codehilite .gu,.md-typeset .highlight .gu{
+.codehilite .gu,.highlight .gu{
     color:#aaa
 }
-.codehilite .gt,.md-typeset .highlight .gt{
+.codehilite .gt,.highlight .gt{
     color:#a00
 }
-.codehilite .gd,.md-typeset .highlight .gd{
+.codehilite .gd,.highlight .gd{
     background-color:#fdd
 }
-.codehilite .gi,.md-typeset .highlight .gi{
+.codehilite .gi,.highlight .gi{
     background-color:#dfd
 }
-.codehilite .k,.md-typeset .highlight .k{
+.codehilite .k,.highlight .k{
     color:#3b78e7
 }
-.codehilite .kc,.md-typeset .highlight .kc{
+.codehilite .kc,.highlight .kc{
     color:#a71d5d
 }
-.codehilite .kd,.codehilite .kn,.md-typeset .highlight .kd,.md-typeset .highlight .kn{
+.codehilite .kd,.codehilite .kn,.highlight .kd,.highlight .kn{
     color:#3b78e7
 }
-.codehilite .kp,.md-typeset .highlight .kp{
+.codehilite .kp,.highlight .kp{
     color:#a71d5d
 }
-.codehilite .kr,.codehilite .kt,.md-typeset .highlight .kr,.md-typeset .highlight .kt{
+.codehilite .kr,.codehilite .kt,.highlight .kr,.highlight .kt{
     color:#3e61a2
 }
-.codehilite .c,.codehilite .cm,.md-typeset .highlight .c,.md-typeset .highlight .cm{
+.codehilite .c,.codehilite .cm,.highlight .c,.highlight .cm{
     color:#999
 }
-.codehilite .cp,.md-typeset .highlight .cp{
+.codehilite .cp,.highlight .cp{
     color:#666
 }
-.codehilite .c1,.codehilite .ch,.codehilite .cs,.md-typeset .highlight .c1,.md-typeset .highlight .ch,.md-typeset .highlight .cs{
+.codehilite .c1,.codehilite .ch,.codehilite .cs,.highlight .c1,.highlight .ch,.highlight .cs{
     color:#999
 }
-.codehilite .na,.codehilite .nb,.md-typeset .highlight .na,.md-typeset .highlight .nb{
+.codehilite .na,.codehilite .nb,.highlight .na,.highlight .nb{
     color:#c2185b
 }
-.codehilite .bp,.md-typeset .highlight .bp{
+.codehilite .bp,.highlight .bp{
     color:#3e61a2
 }
-.codehilite .nc,.md-typeset .highlight .nc{
+.codehilite .nc,.highlight .nc{
     color:#c2185b
 }
-.codehilite .no,.md-typeset .highlight .no{
+.codehilite .no,.highlight .no{
     color:#3e61a2
 }
-.codehilite .nd,.codehilite .ni,.md-typeset .highlight .nd,.md-typeset .highlight .ni{
+.codehilite .nd,.codehilite .ni,.highlight .nd,.highlight .ni{
     color:#666
 }
-.codehilite .ne,.codehilite .nf,.md-typeset .highlight .ne,.md-typeset .highlight .nf{
+.codehilite .ne,.codehilite .nf,.highlight .ne,.highlight .nf{
     color:#c2185b
 }
-.codehilite .nl,.md-typeset .highlight .nl{
+.codehilite .nl,.highlight .nl{
     color:#3b5179
 }
-.codehilite .nn,.md-typeset .highlight .nn{
+.codehilite .nn,.highlight .nn{
     color:#ec407a
 }
-.codehilite .nt,.md-typeset .highlight .nt{
+.codehilite .nt,.highlight .nt{
     color:#3b78e7
 }
-.codehilite .nv,.codehilite .vc,.codehilite .vg,.codehilite .vi,.md-typeset .highlight .nv,.md-typeset .highlight .vc,.md-typeset .highlight .vg,.md-typeset .highlight .vi{
+.codehilite .nv,.codehilite .vc,.codehilite .vg,.codehilite .vi,.highlight .nv,.highlight .vc,.highlight .vg,.highlight .vi{
     color:#3e61a2
 }
-.codehilite .nx,.md-typeset .highlight .nx{
+.codehilite .nx,.highlight .nx{
     color:#ec407a
 }
-.codehilite .il,.codehilite .m,.codehilite .mf,.codehilite .mh,.codehilite .mi,.codehilite .mo,.md-typeset .highlight .il,.md-typeset .highlight .m,.md-typeset .highlight .mf,.md-typeset .highlight .mh,.md-typeset .highlight .mi,.md-typeset .highlight .mo{
+.codehilite .il,.codehilite .m,.codehilite .mf,.codehilite .mh,.codehilite .mi,.codehilite .mo,.highlight .il,.highlight .m,.highlight .mf,.highlight .mh,.highlight .mi,.highlight .mo{
     color:#e74c3c
 }
-.codehilite .s,.codehilite .sb,.codehilite .sc,.md-typeset .highlight .s,.md-typeset .highlight .sb,.md-typeset .highlight .sc{
+.codehilite .s,.codehilite .sb,.codehilite .sc,.highlight .s,.highlight .sb,.highlight .sc{
     color:#0d904f
 }
-.codehilite .sd,.md-typeset .highlight .sd{
+.codehilite .sd,.highlight .sd{
     color:#999
 }
-.codehilite .s2,.md-typeset .highlight .s2{
+.codehilite .s2,.highlight .s2{
     color:#0d904f
 }
-.codehilite .se,.codehilite .sh,.codehilite .si,.codehilite .sx,.md-typeset .highlight .se,.md-typeset .highlight .sh,.md-typeset .highlight .si,.md-typeset .highlight .sx{
+.codehilite .se,.codehilite .sh,.codehilite .si,.codehilite .sx,.highlight .se,.highlight .sh,.highlight .si,.highlight .sx{
     color:#183691
 }
-.codehilite .sr,.md-typeset .highlight .sr{
+.codehilite .sr,.highlight .sr{
     color:#009926
 }
-.codehilite .s1,.codehilite .ss,.md-typeset .highlight .s1,.md-typeset .highlight .ss{
+.codehilite .s1,.codehilite .ss,.highlight .s1,.highlight .ss{
     color:#0d904f
 }
-.codehilite .err,.md-typeset .highlight .err{
+.codehilite .err,.highlight .err{
     color:#a61717
 }
-.codehilite .w,.md-typeset .highlight .w{
+.codehilite .w,.highlight .w{
     color:transparent
 }
-.codehilite .hll,.md-typeset .highlight .hll{
+.codehilite .hll, .highlight .hll{
     display:block;
     margin:0 -.6rem;
     padding:0 .6rem;
     background-color:rgba(255,235,59,.5)
 }
-.md-typeset .codehilite,.md-typeset .highlight{
+.md-typeset .codehilite,.highlight{
     position:relative;
     margin:1em 0;
     padding:0;
@@ -1670,7 +1670,7 @@ html .md-typeset .admonition>:last-child,html .md-typeset details>:last-child{
     line-height:1.4;
     -webkit-overflow-scrolling:touch
 }
-.md-typeset .codehilite code,.md-typeset .codehilite pre,.md-typeset .highlight code,.md-typeset .highlight pre{
+.md-typeset .codehilite code,.md-typeset .codehilite pre,.highlight code,.highlight pre{
     display:block;
     margin:0;
     padding:.525rem .6rem;
@@ -1678,14 +1678,14 @@ html .md-typeset .admonition>:last-child,html .md-typeset details>:last-child{
     overflow:auto;
     vertical-align:top
 }
-.md-typeset .codehilite code::-webkit-scrollbar,.md-typeset .codehilite pre::-webkit-scrollbar,.md-typeset .highlight code::-webkit-scrollbar,.md-typeset .highlight pre::-webkit-scrollbar{
+.md-typeset .codehilite code::-webkit-scrollbar,.md-typeset .codehilite pre::-webkit-scrollbar,.highlight code::-webkit-scrollbar,.highlight pre::-webkit-scrollbar{
     width:.2rem;
     height:.2rem
 }
-.md-typeset .codehilite code::-webkit-scrollbar-thumb,.md-typeset .codehilite pre::-webkit-scrollbar-thumb,.md-typeset .highlight code::-webkit-scrollbar-thumb,.md-typeset .highlight pre::-webkit-scrollbar-thumb{
+.md-typeset .codehilite code::-webkit-scrollbar-thumb,.md-typeset .codehilite pre::-webkit-scrollbar-thumb,.highlight code::-webkit-scrollbar-thumb,.highlight pre::-webkit-scrollbar-thumb{
     background-color:rgba(0,0,0,.26)
 }
-.md-typeset .codehilite code::-webkit-scrollbar-thumb:hover,.md-typeset .codehilite pre::-webkit-scrollbar-thumb:hover,.md-typeset .highlight code::-webkit-scrollbar-thumb:hover,.md-typeset .highlight pre::-webkit-scrollbar-thumb:hover{
+.md-typeset .codehilite code::-webkit-scrollbar-thumb:hover,.md-typeset .codehilite pre::-webkit-scrollbar-thumb:hover,.highlight code::-webkit-scrollbar-thumb:hover, .highlight pre::-webkit-scrollbar-thumb:hover{
     background-color:#536dfe
 }
 .md-typeset pre.codehilite,.md-typeset pre.highlight{
