--- a/sphinx_material/sphinx_material/static/stylesheets/application.css
+++ b/sphinx_material/sphinx_material/static/stylesheets/application.css
@@ -194,12 +194,14 @@ code,kbd,pre{
     -webkit-box-decoration-break:clone;
     box-decoration-break:clone
 }
+/* TODO: Reverted from #35, needs a different fix
 .md-typeset code::before {
   content: "\00a0";
 }
 .md-typeset code::after {
   content: "\00a0";
 }
+*/
 .md-typeset h1 code,.md-typeset h2 code,.md-typeset h3 code,.md-typeset h4 code,.md-typeset h5 code,.md-typeset h6 code{
     margin:0;
     background-color:transparent;
