BUG: Fix layout for production list
Remove display block for pre>code

cloes #32

--- a/sphinx_material/sphinx_material/static/stylesheets/application.css
+++ b/sphinx_material/sphinx_material/static/stylesheets/application.css
@@ -223,7 +223,10 @@ code,kbd,pre{
     -webkit-overflow-scrolling:touch
 }
 .md-typeset pre>code{
+    /*
+    See GH #32
     display:block;
+    */
     margin:0;
     padding:.525rem .6rem;
     background-color:transparent;
