--- a/sphinx_material/sphinx_material/static/stylesheets/application.css
+++ b/sphinx_material/sphinx_material/static/stylesheets/application.css
@@ -2403,6 +2403,9 @@ html .md-typeset .superfences-tabs>label:hover{
         left:auto
     }
     .md-nav--primary .md-nav__list{
+        /* TODO: Consider changing, but need more fix
+             See GH#48
+        */
         flex:1;
         overflow-y:auto
     }
