--- a/openff-sphinx-theme/openff-sphinx-theme/static/stylesheets/application-palette.css
+++ b/openff-sphinx-theme/openff-sphinx-theme/static/stylesheets/application-palette.css
@@ -16,6 +16,33 @@ button[data-md-color-primary]:hover {
     opacity: .75
 }
 
+
+button[data-md-color-primary=openff-blue] {
+    background-color: #015480
+}
+
+button[data-md-color-primary=openff-blue] {
+    background-color: #015480
+}
+
+[data-md-color-primary=openff-blue] .md-typeset a {
+    color: #015480
+}
+
+[data-md-color-primary=openff-blue] .md-header,
+[data-md-color-primary=openff-blue] .md-hero {
+    background-color: #015480
+}
+
+[data-md-color-primary=openff-blue] .md-nav__link--active,
+[data-md-color-primary=openff-blue] .md-nav__link:active {
+    color: #015480
+}
+
+[data-md-color-primary=openff-blue] .md-nav__item--nested>.md-nav__link {
+    color: inherit
+}
+
 button[data-md-color-primary=red] {
     background-color: #ef5350
 }
@@ -1138,6 +1165,9 @@ button[data-md-color-accent=deep-orange] {
 }
 
 @media only screen and (max-width:59.9375em) {
+    [data-md-color-primary=openff-blue] .md-nav__source {
+        background-color: rgba(1, 84, 128, .9675)
+    }
     [data-md-color-primary=red] .md-nav__source {
         background-color: rgba(190, 66, 64, .9675)
     }
@@ -1202,6 +1232,9 @@ button[data-md-color-accent=deep-orange] {
 }
 
 @media only screen and (max-width:76.1875em) {
+    html [data-md-color-primary=openff-blue] .md-nav--primary .md-nav__title--site {
+        background-color: #015480
+    }
     html [data-md-color-primary=red] .md-nav--primary .md-nav__title--site {
         background-color: #ef5350
     }
@@ -1269,6 +1302,9 @@ button[data-md-color-accent=deep-orange] {
 }
 
 @media only screen and (min-width:76.25em) {
+    [data-md-color-primary=openff-blue] .md-tabs {
+        background-color: #015480
+    }
     [data-md-color-primary=red] .md-tabs {
         background-color: #ef5350
     }
