Add OpenFF colours to palette

--- a/openff_sphinx_theme/openff_sphinx_theme/static/stylesheets/application-palette.css
+++ b/openff_sphinx_theme/openff_sphinx_theme/static/stylesheets/application-palette.css
@@ -767,6 +767,152 @@ button[data-md-color-accent=deep-orange] {
     color: #ff6e40;
 }
 
+/* Toolkit light blue */
+button[data-md-color-accent=openff-toolkit-blue] {
+    background-color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-typeset a:active,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset a:hover {
+    color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-typeset .codehilite pre::-webkit-scrollbar-thumb:hover,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset pre code::-webkit-scrollbar-thumb:hover {
+    background-color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-nav__link:focus,
+[data-md-color-accent=openff-toolkit-blue] .md-nav__link:hover,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset .footnote li:hover .footnote-backref:hover,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset .footnote li:target .footnote-backref,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset .md-clipboard:active:before,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset .md-clipboard:hover:before,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset [id] .headerlink:focus,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset [id]:hover .headerlink:hover,
+[data-md-color-accent=openff-toolkit-blue] .md-typeset [id]:target .headerlink {
+    color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-search__scrollwrap::-webkit-scrollbar-thumb:hover {
+    background-color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-search-result__link:hover,
+[data-md-color-accent=openff-toolkit-blue] .md-search-result__link[data-md-state=active] {
+    background-color: rgba(47, 158, 210, .1)
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-sidebar__scrollwrap::-webkit-scrollbar-thumb:hover {
+    background-color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-source-file:hover:before {
+    background-color: #2F9ED2
+}
+
+[data-md-color-accent=openff-toolkit-blue] .md-nav__link .caption-text {
+    color: #2F9ED2;
+}
+
+
+/* Dataset yellow */
+button[data-md-color-accent=openff-dataset-yellow] {
+    background-color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-typeset a:active,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset a:hover {
+    color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-typeset .codehilite pre::-webkit-scrollbar-thumb:hover,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset pre code::-webkit-scrollbar-thumb:hover {
+    background-color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-nav__link:focus,
+[data-md-color-accent=openff-dataset-yellow] .md-nav__link:hover,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset .footnote li:hover .footnote-backref:hover,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset .footnote li:target .footnote-backref,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset .md-clipboard:active:before,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset .md-clipboard:hover:before,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset [id] .headerlink:focus,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset [id]:hover .headerlink:hover,
+[data-md-color-accent=openff-dataset-yellow] .md-typeset [id]:target .headerlink {
+    color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-search__scrollwrap::-webkit-scrollbar-thumb:hover {
+    background-color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-search-result__link:hover,
+[data-md-color-accent=openff-dataset-yellow] .md-search-result__link[data-md-state=active] {
+    background-color: rgba(240, 133, 33, .1)
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-sidebar__scrollwrap::-webkit-scrollbar-thumb:hover {
+    background-color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-source-file:hover:before {
+    background-color: #F08521
+}
+
+[data-md-color-accent=openff-dataset-yellow] .md-nav__link .caption-text {
+    color: #F08521;
+}
+
+
+/* Evaluator orange */
+button[data-md-color-accent=openff-evaluator-orange] {
+    background-color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-typeset a:active,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset a:hover {
+    color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-typeset .codehilite pre::-webkit-scrollbar-thumb:hover,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset pre code::-webkit-scrollbar-thumb:hover {
+    background-color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-nav__link:focus,
+[data-md-color-accent=openff-evaluator-orange] .md-nav__link:hover,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset .footnote li:hover .footnote-backref:hover,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset .footnote li:target .footnote-backref,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset .md-clipboard:active:before,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset .md-clipboard:hover:before,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset [id] .headerlink:focus,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset [id]:hover .headerlink:hover,
+[data-md-color-accent=openff-evaluator-orange] .md-typeset [id]:target .headerlink {
+    color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-search__scrollwrap::-webkit-scrollbar-thumb:hover {
+    background-color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-search-result__link:hover,
+[data-md-color-accent=openff-evaluator-orange] .md-search-result__link[data-md-state=active] {
+    background-color: rgba(240, 58, 33, .1)
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-sidebar__scrollwrap::-webkit-scrollbar-thumb:hover {
+    background-color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-source-file:hover:before {
+    background-color: #F03A21
+}
+
+[data-md-color-accent=openff-evaluator-orange] .md-nav__link .caption-text {
+    color: #F03A21;
+}
+
 @media only screen and (min-width:60em) {
     [data-md-color-primary=white] .md-search__input {
         background-color: rgba(0, 0, 0, .07)
