--- a/openff_sphinx_theme/openff_sphinx_theme/static/stylesheets/application.css
+++ b/openff_sphinx_theme/openff_sphinx_theme/static/stylesheets/application.css
@@ -146,7 +146,7 @@ code,kbd,pre{
     color:rgba(0,0,0,.87);
     -webkit-font-feature-settings:"kern";
     font-feature-settings:"kern";
-    font-family:"Roboto Mono", monospace;
+    font-family:"PT Mono", monospace;
 }
 .md-typeset{
     font-size:.8rem;
