--- a/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/sphinx-content.sass
@@ -225,3 +225,14 @@ p, dl, ol, ul, blockquote, pre, table
 
     &.tip
         @include admonition-colors("success")
+
+.align-center
+    display: block
+    margin-left: auto
+    margin-right: auto
+.align-right
+    display: block
+    margin-left: auto
+.align-left
+    display: block
+    margin-right: auto
